# pmhc-present

./: .gitignore  README.md  REPRODUCE.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
scripts/: ablation_a2.py  ablation_a2_condB.py  ablation_family_condB.py  analyse_pae.py  demo_train.py  extract_boltz_features.py  extract_geometry.py  per_allele_auroc.py  plot_per_allele.py  prepare_atlas.py  select_decoys.py  select_decoys_clean.py  select_fold_set.py  select_fold_set_canonical.py
scripts/beta/: fold_alphafold.sh  run_netmhcpan.sh
src/pmhcpresent/: __init__.py  cli.py
src/pmhcpresent/ensemble/: __init__.py  ensemble.py
src/pmhcpresent/eval/: __init__.py  metrics.py  splits.py  stratified.py
src/pmhcpresent/io/: __init__.py  netmhcpan.py  peptides.py  pseudoseq.py
src/pmhcpresent/models/: __init__.py  nn.py
src/pmhcpresent/structure/: __init__.py  _pdb.py  contacts.py  features.py  ipsae.py  plddt.py  shape.py
src/pmhcpresent/train/: __init__.py  dataset.py  trainer.py
tests/: test_dataset.py  test_encoding.py  test_netmhcpan.py  test_nn_forward.py  test_pseudoseq.py  test_splits.py  test_stratified.py  test_training_smoke.py
tests/fixtures/: netmhcpan_sample.txt
