[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmhcpresent"
version = "0.0.1"
description = "AI for cancer-antigen discovery: HLA-I presentation with an equity lens (P11, COMP0190)"
requires-python = ">=3.13"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "scikit-learn",
  "pyyaml",
]

[project.optional-dependencies]
struct = ["biopython", "freesasa"]
ml = ["torch"]
dev = ["pytest", "ruff"]

[project.scripts]
pmhcpresent = "pmhcpresent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # re-exports are the package's public API, not dead imports
"tests/*" = ["E402"]       # pytest.importorskip must run before the gated import
